--- a/public/Assets/css/game.css
+++ b/public/Assets/css/game.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(224,224,223);
-    background-image: url("assets/images/gray_bg.jpg");
+    background-image: url("Assets/Images/gray_bg.jpg");
       }
 
 .all {
